--- a/homeapp/templates/homeapp/services/individuals/individual_bankruptcy_service.html
+++ b/homeapp/templates/homeapp/services/individuals/individual_bankruptcy_service.html
@@ -3,42 +3,56 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Услуги адвоката по банкротству физических лиц</h1>
 
-        <h1>Услуги адвоката по банкротству физических лиц</h1>
-
-        <p>Адвокат по банкротству физических лиц специализируется на предоставлении правовой помощи людям, 
-            находящимся в финансовых затруднениях и столкнувшимся с проблемами банкротства. Вот как адвокат 
+        <p>Адвокат по банкротству физических лиц специализируется на предоставлении правовой помощи людям,
+            находящимся в финансовых затруднениях и столкнувшимся с проблемами банкротства. Вот как адвокат
             по банкротству физических лиц может помочь вам:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Консультации и оценка ситуации.</b> Адвокат проведет подробную консультацию, 
-                изучит вашу финансовую ситуацию и поможет определить, является ли банкротство подходящим решением для вас.
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Консультации и оценка ситуации.</b> Адвокат проведет подробную консультацию,
+                изучит вашу финансовую ситуацию и поможет определить, является ли банкротство подходящим решением для
+                вас.
             </li>
-            <li class="list-group-item m-2"><b>Подготовка документов.</b> Адвокат поможет вам собрать и подготовить 
+            <li class="list-group-item"><b>Подготовка документов.</b> Адвокат поможет вам собрать и подготовить
                 все необходимые документы для подачи заявления о банкротстве.
             </li>
-            <li class="list-group-item m-2"><b>Представление интересов в суде.</b> Адвокат будет представлять ваши интересы 
+            <li class="list-group-item"><b>Представление интересов в суде.</b> Адвокат будет представлять ваши интересы
                 в суде и взаимодействовать с кредиторами, судом и другими сторонами в процессе банкротства.
             </li>
-            <li class="list-group-item m-2"><b>Разработка стратегии банкротства.</b> Адвокат поможет разработать 
+            <li class="list-group-item"><b>Разработка стратегии банкротства.</b> Адвокат поможет разработать
                 стратегию банкротства, чтобы максимально защитить ваши интересы и минимизировать негативные последствия.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в переговорах с кредиторами.</b> Адвокат может помочь вам договориться 
+            <li class="list-group-item"><b>Помощь в переговорах с кредиторами.</b> Адвокат может помочь вам договориться
                 с кредиторами о реструктуризации долга или других вопросах, связанных с процессом банкротства.
             </li>
-            <li class="list-group-item m-2"><b>Обучение и консультации.</b> Адвокат по банкротству может обучить 
-                вас вашим правам и обязанностям в рамках процесса банкротства и предоставить консультации по всем вопросам, 
+            <li class="list-group-item"><b>Обучение и консультации.</b> Адвокат по банкротству может обучить
+                вас вашим правам и обязанностям в рамках процесса банкротства и предоставить консультации по всем
+                вопросам,
                 связанным с этой темой.
             </li>
         </ul>
 
-        <p>Банкротство физических лиц — это сложный и ответственный процесс, и помощь опытного адвоката может 
-            значительно облегчить его протекание и защитить ваши интересы. Обращение к адвокату по банкротству 
-            поможет вам пройти через этот трудный период с минимальными потерями и негативными последствиями 
+        <p>Банкротство физических лиц — это сложный и ответственный процесс, и помощь опытного адвоката может
+            значительно облегчить его протекание и защитить ваши интересы. Обращение к адвокату по банкротству
+            поможет вам пройти через этот трудный период с минимальными потерями и негативными последствиями
             для вашего финансового будущего.</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
