--- a/homeapp/templates/homeapp/services/individuals/medical_service.html
+++ b/homeapp/templates/homeapp/services/individuals/medical_service.html
@@ -3,45 +3,57 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Услуги адвокат по возмещению вреда здоровью</h1>
 
-        <h1>Услуги адвокат по возмещению вреда здоровью</h1>
-
-        <p>Адвокат, специализирующийся на медицинских делах, оказывает правовую помощь в области 
+        <p>Адвокат, специализирующийся на медицинских делах, оказывает правовую помощь в области
             здравоохранения и медицинского права. Вот как адвокат по медицинским делам может помочь вам:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Медицинская неделимость.</b> Адвокат поможет 
-                вам разобраться в вопросах, связанных с медицинской неделимостью, правами пациентов 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Медицинская неделимость.</b> Адвокат поможет
+                вам разобраться в вопросах, связанных с медицинской неделимостью, правами пациентов
                 и медицинскими стандартами.
             </li>
-            <li class="list-group-item m-2"><b>Медицинские ошибки.</b> В случае возникновения проблем 
+            <li class="list-group-item"><b>Медицинские ошибки.</b> В случае возникновения проблем
                 из-за медицинских ошибок, адвокат проведет расследование и поможет в защите ваших прав.
             </li>
-            <li class="list-group-item m-2"><b>Споры с медицинским учреждением.</b> Адвокат предоставит 
-                правовую поддержку в случае споров с медицинским учреждением, включая претензии, жалобы 
+            <li class="list-group-item"><b>Споры с медицинским учреждением.</b> Адвокат предоставит
+                правовую поддержку в случае споров с медицинским учреждением, включая претензии, жалобы
                 и судебные разбирательства.
             </li>
-            <li class="list-group-item m-2"><b>Защита прав пациентов.</b> Адвокат будет защищать ваши права 
+            <li class="list-group-item"><b>Защита прав пациентов.</b> Адвокат будет защищать ваши права
                 как пациента, обеспечивая соблюдение законодательства о правах пациентов и качестве медицинской помощи.
             </li>
-            <li class="list-group-item m-2"><b>Конфиденциальность медицинской информации.</b> Адвокат поможет в защите 
+            <li class="list-group-item"><b>Конфиденциальность медицинской информации.</b> Адвокат поможет в защите
                 конфиденциальности вашей медицинской информации и борьбе с незаконным раскрытием данных.
             </li>
-            <li class="list-group-item m-2"><b>Лицензирование и регулирование.</b> В случае проблем с лицензированием 
+            <li class="list-group-item"><b>Лицензирование и регулирование.</b> В случае проблем с лицензированием
                 или регулированием медицинской деятельности, адвокат окажет юридическую поддержку.
             </li>
-            <li class="list-group-item m-2"><b>Соглашения о медицинских услугах.</b> Адвокат поможет вам 
-                разбираться в соглашениях о медицинских услугах, защищая ваши интересы при заключении контрактов 
+            <li class="list-group-item"><b>Соглашения о медицинских услугах.</b> Адвокат поможет вам
+                разбираться в соглашениях о медицинских услугах, защищая ваши интересы при заключении контрактов
                 с медицинскими учреждениями.
             </li>
         </ul>
 
-        <p>Адвокат по медицинским делам обеспечит вам профессиональную юридическую поддержку 
-            во всех вопросах, связанных с медицинским правом, помогая защитить ваши интересы и права 
+        <p>Адвокат по медицинским делам обеспечит вам профессиональную юридическую поддержку
+            во всех вопросах, связанных с медицинским правом, помогая защитить ваши интересы и права
             в области здравоохранения.</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
