--- a/homeapp/templates/homeapp/services/individuals/online_consultation_service.html
+++ b/homeapp/templates/homeapp/services/individuals/online_consultation_service.html
@@ -3,38 +3,52 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Юридические консультации онлайн</h1>
 
-        <h1>Юридические консультации онлайн</h1>
-
-        <p>Адвокаты предоставляют различные услуги онлайн, включая юридические консультации. 
+        <p>Адвокаты предоставляют различные услуги онлайн, включая юридические консультации.
             Вот некоторые из услуг, которые могут предоставлять адвокаты онлайн:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Юридические консультации.</b> ААдвокаты могут проводить 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Юридические консультации.</b> ААдвокаты могут проводить
                 консультации по телефону, видеозвонкам или через онлайн чаты для обсуждения ваших юридических вопросов.
             </li>
-            <li class="list-group-item m-2"><b>Подготовка документов.</b> Вы можете запросить адвоката онлайн 
+            <li class="list-group-item"><b>Подготовка документов.</b> Вы можете запросить адвоката онлайн
                 для подготовки различных юридических документов, таких как договоры, жалобы, иски и другие документы.
             </li>
-            <li class="list-group-item m-2"><b>Представительство в суде.</b> Адвокаты могут представлять ваши 
+            <li class="list-group-item"><b>Представительство в суде.</b> Адвокаты могут представлять ваши
                 интересы в судебных процессах и заседаниях онлайн, если это допускается местным законодательством.
             </li>
-            <li class="list-group-item m-2"><b>Разрешение споров.</b> Онлайн адвокаты могут помочь вам 
+            <li class="list-group-item"><b>Разрешение споров.</b> Онлайн адвокаты могут помочь вам
                 разрешить различные юридические споры, в том числе семейные, имущественные, трудовые и другие споры.
             </li>
-            <li class="list-group-item m-2"><b>Консультации по налогам.</b> Если у вас возникли вопросы 
+            <li class="list-group-item"><b>Консультации по налогам.</b> Если у вас возникли вопросы
                 по налогообложению, адвокаты могут предоставить консультации и помощь в этой области.
             </li>
-            <li class="list-group-item m-2"><b>Конфиденциальность и безопасность.</b> Онлайн адвокаты обеспечивают 
-                конфиденциальность и безопасность ваших данных при общении и предоставлении юридических услуг через интернет.
+            <li class="list-group-item"><b>Конфиденциальность и безопасность.</b> Онлайн адвокаты обеспечивают
+                конфиденциальность и безопасность ваших данных при общении и предоставлении юридических услуг через
+                интернет.
             </li>
         </ul>
 
-        <p>Если у вас есть юридические вопросы или вам нужна помощь адвоката, вы можете найти специалиста, предоставляющего 
+        <p>Если у вас есть юридические вопросы или вам нужна помощь адвоката, вы можете найти специалиста,
+            предоставляющего
             онлайн услуги, и обсудить с ним свою ситуацию для получения квалифицированной помощи и консультации.</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
