--- a/homeapp/templates/homeapp/forms/application_form.html
+++ b/homeapp/templates/homeapp/forms/application_form.html
@@ -1,21 +1,21 @@
 <form method="POST" class="job-form" prefix="form" id="form">
     {% csrf_token %}
 
-    <div class="form-group">
+    <div class="form-group half">
         <input type="text" name="username" class="form-control" 
         placeholder="Имя" required autocomplete="">
     </div>
 
-    <div class="form-group">
+    <div class="form-group half">
         <input name="number" type="text" class="form-control telmask"
         placeholder="Телефон" maxlength="12"
         aria-label="Sizing example input">
     </div>
 
     <div class="form-group">
-        <input name="question" type="text" class="form-control"
-               placeholder="Вопрос (необязательно)" aria-label="Question (optional)">
+        <textarea name="question" type="text" class="form-control question" aria-label="Question (optional)">Вопрос
+        </textarea>
     </div>
 
-    <button type="submit" class="btn btn-primary mt-3">Отправить</button>
+    <button type="submit" class="job-form__submit">Отправить</button>
 </form>
