--- a/homeapp/templates/homeapp/forms/consultation_form.html
+++ b/homeapp/templates/homeapp/forms/consultation_form.html
@@ -21,7 +21,7 @@
 
             <div class="row ">
                 <div class="col-4 ">
-                    <button type="submit" class="btn btn-secondary "
+                    <button type="submit" class="btn btn-secondary form__submit"
                             data-bs-dismiss="modal">
                         Оставить
                         заявку
