--- a/homeapp/templates/homeapp/services/individuals/administrative_pinalties_service.html
+++ b/homeapp/templates/homeapp/services/individuals/administrative_pinalties_service.html
@@ -3,35 +3,54 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
 
-        <h1>Услуги адвокатов по обжалованию административных наказаний</h1>
+    <div class="page-section">
+        <h1 class="page-section__title">Услуги адвокатов по обжалованию административных наказаний</h1>
 
-        <p>Адвокаты могут предоставлять услуги по обжалованию административных наказаний. 
+        <p>Адвокаты могут предоставлять услуги по обжалованию административных наказаний.
             Вот как адвокат может помочь в данном случае:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Проверка законности и обоснованности наказания.</b> Адвокат проведет анализ 
-                обстоятельств вашего дела и проверит, было ли наложенное административное наказание законным и обоснованным.
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Проверка законности и обоснованности наказания.</b> Адвокат проведет
+                анализ
+                обстоятельств вашего дела и проверит, было ли наложенное административное наказание законным и
+                обоснованным.
             </li>
-            <li class="list-group-item m-2"><b>Подготовка апелляционной жалобы.</b> Адвокат поможет вам подготовить апелляционную жалобу, 
+            <li class="list-group-item"><b>Подготовка апелляционной жалобы.</b> Адвокат поможет вам подготовить
+                апелляционную жалобу,
                 в которой будут изложены все аргументы и доказательства в пользу вашей позиции.
             </li>
-            <li class="list-group-item m-2"><b>Представление интересов в суде.</b> В случае необходимости адвокат будет 
+            <li class="list-group-item"><b>Представление интересов в суде.</b> В случае необходимости адвокат будет
                 представлять ваши интересы в суде по административным делам и защищать вас во время слушания.
             </li>
-            <li class="list-group-item m-2"><b>Переговоры с компетентными органами.</b> Адвокат может участвовать в переговорах 
+            <li class="list-group-item"><b>Переговоры с компетентными органами.</b> Адвокат может участвовать в
+                переговорах
                 с представителями компетентных органов для достижения урегулирования дела во внесудебном порядке.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в разрешении конфликта.</b> Адвокат поможет вам разрешить конфликт с органами, 
+            <li class="list-group-item"><b>Помощь в разрешении конфликта.</b> Адвокат поможет вам разрешить конфликт
+                с органами,
                 наложившими наказание, через конструктивный диалог и поиск компромиссных решений.
             </li>
         </ul>
 
-        <p>Обращение к адвокату по обжалованию административных наказаний может значительно повысить ваши шансы на успешное 
+        <p>Обращение к адвокату по обжалованию административных наказаний может значительно повысить ваши шансы на
+            успешное
             рассмотрение вашего дела и защиту ваших прав.</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
