--- a/homeapp/templates/homeapp/services/individuals/appeals_service.html
+++ b/homeapp/templates/homeapp/services/individuals/appeals_service.html
@@ -3,39 +3,56 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
 
-        <h1>Услуги адвокатов по обжалованию решений</h1>
+    <div class="page-section">
+        <h1 class="page-section__title">Услуги адвокатов по обжалованию решений</h1>
 
-        <p>Адвокаты могут предоставлять услуги по апелляционному и кассационному обжалованию 
+        <p>Адвокаты могут предоставлять услуги по апелляционному и кассационному обжалованию
             судебных актов. Вот как адвокаты могут помочь в этих процессах:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Апелляционное обжалование.</b> Апелляционное обжалование предполагает 
-                обжалование решения суда на более высоком уровне. Адвокат может помочь в подготовке апелляционной жалобы, 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Апелляционное обжалование.</b> Апелляционное обжалование предполагает
+                обжалование решения суда на более высоком уровне. Адвокат может помочь в подготовке апелляционной
+                жалобы,
                 аргументировать позицию клиента и представить дело перед апелляционным судом.
             </li>
-            <li class="list-group-item m-2"><b>Кассационное обжалование.</b> Кассационное обжалование направлено 
-                на проверку правильности применения закона в решении суда. Адвокат может подготовить кассационную жалобу, 
+            <li class="list-group-item"><b>Кассационное обжалование.</b> Кассационное обжалование направлено
+                на проверку правильности применения закона в решении суда. Адвокат может подготовить кассационную
+                жалобу,
                 провести анализ документов дела и представить интересы клиента перед кассационным судом.
             </li>
-            <li class="list-group-item m-2"><b>Анализ дела.</b> Адвокат проведет тщательный анализ судебного дела, 
+            <li class="list-group-item"><b>Анализ дела.</b> Адвокат проведет тщательный анализ судебного дела,
                 выявит ошибки или нарушения процессуальных норм, которые могли повлиять на решение суда.
             </li>
-            <li class="list-group-item m-2"><b>Подготовка документов.</b> Адвокат поможет подготовить все необходимые 
-                документы для апелляционного или кассационного обжалования, включая жалобы, мотивированные заключения и другие документы.
+            <li class="list-group-item"><b>Подготовка документов.</b> Адвокат поможет подготовить все необходимые
+                документы для апелляционного или кассационного обжалования, включая жалобы, мотивированные заключения и
+                другие документы.
             </li>
-            <li class="list-group-item m-2"><b>Представительство в суде.</b> Адвокат будет представлять интересы 
-                клиента на всех этапах апелляционного или кассационного процесса, защищая и аргументируя позицию клиента перед судом.
+            <li class="list-group-item"><b>Представительство в суде.</b> Адвокат будет представлять интересы
+                клиента на всех этапах апелляционного или кассационного процесса, защищая и аргументируя позицию клиента
+                перед судом.
             </li>
         </ul>
 
-        <p>Если у вас возникла необходимость обжаловать судебный акт в апелляционном или кассационном порядке, 
-            рекомендуется обратиться к опытному адвокату, специализирующемуся на данной области права. 
-            Он поможет вам разработать стратегию обжалования, подготовить все необходимые документы и представить ваше 
+        <p>Если у вас возникла необходимость обжаловать судебный акт в апелляционном или кассационном порядке,
+            рекомендуется обратиться к опытному адвокату, специализирующемуся на данной области права.
+            Он поможет вам разработать стратегию обжалования, подготовить все необходимые документы и представить ваше
             дело перед соответствующим судом.</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
