--- a/homeapp/templates/homeapp/services/individuals/civil_defense.html
+++ b/homeapp/templates/homeapp/services/individuals/civil_defense.html
@@ -3,50 +3,66 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="page-section">
+        <h1 class="page-section__title">Защита адвоката по гражданским делам</h1>
 
-        <h1>Защита адвоката по гражданским делам</h1>
-
-        <p>Услуги адвокатов по гражданским делам охватывают широкий спектр юридических 
-            вопросов, связанных с гражданским правом. Некоторые из основных услуг, которые предоставляют 
+        <p>Услуги адвокатов по гражданским делам охватывают широкий спектр юридических
+            вопросов, связанных с гражданским правом. Некоторые из основных услуг, которые предоставляют
             адвокаты нашей коллегии по гражданским делам:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Представление интересов в суде.</b> Адвокаты представляют интересы клиентов 
-                в гражданских судебных процессах, в том числе в спорах о собственности, договорах, наследстве, 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Представление интересов в суде.</b> Адвокаты представляют интересы
+                клиентов
+                в гражданских судебных процессах, в том числе в спорах о собственности, договорах, наследстве,
                 разводах и других делах.
             </li>
-            <li class="list-group-item m-2"><b>Консультации и разъяснения.</b> Адвокаты консультируют клиентов по различным 
-                вопросам гражданского права, помогая им понять свои права и обязанности, а также разъясняя 
+            <li class="list-group-item  "><b>Консультации и разъяснения.</b> Адвокаты консультируют клиентов по
+                различным
+                вопросам гражданского права, помогая им понять свои права и обязанности, а также разъясняя
                 сложные юридические аспекты.
             </li>
-            <li class="list-group-item m-2"><b>Составление и анализ договоров.</b> Адвокаты помогают клиентам составлять, 
-                анализировать и пересматривать гражданско-правовые договоры, чтобы защитить их интересы и 
+            <li class="list-group-item  "><b>Составление и анализ договоров.</b> Адвокаты помогают клиентам
+                составлять,
+                анализировать и пересматривать гражданско-правовые договоры, чтобы защитить их интересы и
                 избежать возможных юридических проблем.
             </li>
-            <li class="list-group-item m-2"><b>Урегулирование споров.</b> Адвокаты помогают клиентам урегулировать 
-                споры внесудебным путем, в том числе через переговоры, посредничество или альтернативные 
+            <li class="list-group-item  "><b>Урегулирование споров.</b> Адвокаты помогают клиентам урегулировать
+                споры внесудебным путем, в том числе через переговоры, посредничество или альтернативные
                 методы разрешения споров.
             </li>
-            <li class="list-group-item m-2"><b>Защита прав потребителей.</b> Адвокаты защищают права потребителей 
-                в случае возникновения споров с поставщиками товаров или услуг, помогая им добиться компенсации 
+            <li class="list-group-item  "><b>Защита прав потребителей.</b> Адвокаты защищают права потребителей
+                в случае возникновения споров с поставщиками товаров или услуг, помогая им добиться компенсации
                 или вернуть деньги.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в исполнении решений суда.</b> Адвокаты помогают клиентам 
-                с исполнением решений суда, взысканием долгов, а также представляют интересы клиентов 
+            <li class="list-group-item  "><b>Помощь в исполнении решений суда.</b> Адвокаты помогают клиентам
+                с исполнением решений суда, взысканием долгов, а также представляют интересы клиентов
                 в исполнительном производстве.
             </li>
-            <li class="list-group-item m-2"><b>Представление интереcов в арбитраже.</b> Адвокаты представляют интересы клиентов 
+            <li class="list-group-item  "><b>Представление интереcов в арбитраже.</b> Адвокаты представляют интересы
+                клиентов
                 в арбитражных судах и решают споры, возникающие в ходе коммерческой деятельности.
             </li>
         </ul>
 
-        <p>Услуги адвоката по гражданским делам направлены на защиту прав и интересов клиентов, помощь 
-            в решении юридических проблем и обеспечение соблюдения законности. Найти опытного адвоката, 
-            специализирующегося на гражданском праве, может быть ключевым шагом для успешного разрешения 
+        <p>Услуги адвоката по гражданским делам направлены на защиту прав и интересов клиентов, помощь
+            в решении юридических проблем и обеспечение соблюдения законности. Найти опытного адвоката,
+            специализирующегося на гражданском праве, может быть ключевым шагом для успешного разрешения
             юридических вопросов.</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
