--- a/homeapp/templates/homeapp/services/individuals/consumer_protection_service.html
+++ b/homeapp/templates/homeapp/services/individuals/consumer_protection_service.html
@@ -3,45 +3,58 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="page-section">
+        <h1 class="page-section__title">Услуги адвоката по защите прав потребителей</h1>
 
-        <h1>Услуги адвоката по защите прав потребителей</h1>
-
-        <p>Адвокат по защите прав потребителей специализируется на предоставлении юридической помощи 
-            и защите интересов клиентов в сфере потребительских прав. Вот как адвокат по защите прав 
+        <p>Адвокат по защите прав потребителей специализируется на предоставлении юридической помощи
+            и защите интересов клиентов в сфере потребительских прав. Вот как адвокат по защите прав
             потребителей может помочь вам:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Консультации и оценка ситуации.</b> Адвокат проведет консультацию, поможет вам 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item  "><b>Консультации и оценка ситуации.</b> Адвокат проведет консультацию,
+                поможет вам
                 понять ваши права как потребителя и оценит ситуацию, с которой вы столкнулись.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в разрешении споров.</b> Адвокат поможет вам разрешить споры 
-                с продавцами, застройщиками, поставщиками товаров или услуг, банками или другими организациями, 
+            <li class="list-group-item  "><b>Помощь в разрешении споров.</b> Адвокат поможет вам разрешить споры
+                с продавцами, застройщиками, поставщиками товаров или услуг, банками или другими организациями,
                 нарушившими ваши права как потребителя.
             </li>
-            <li class="list-group-item m-2"><b>Представление интересов в суде.</b> В случае необходимости 
-                адвокат будет представлять ваши интересы в суде и защищать вас от недобросовестных действий 
+            <li class="list-group-item  "><b>Представление интересов в суде.</b> В случае необходимости
+                адвокат будет представлять ваши интересы в суде и защищать вас от недобросовестных действий
                 со стороны компаний или организаций.
             </li>
-            <li class="list-group-item m-2"><b>Анализ договоров и документов.</b> Адвокат может помочь вам анализировать 
-                договоры, условия предоставления услуг или продажи товаров, чтобы убедиться, что они соответствуют 
+            <li class="list-group-item  "><b>Анализ договоров и документов.</b> Адвокат может помочь вам анализировать
+                договоры, условия предоставления услуг или продажи товаров, чтобы убедиться, что они соответствуют
                 законодательству о защите прав потребителей.
             </li>
-            <li class="list-group-item m-2"><b>Составление претензий и жалоб.</b> Адвокат поможет вам составить 
-                претензии и жалобы в случае нарушения ваших прав, чтобы защитить вас от недобросовестных действий 
+            <li class="list-group-item  "><b>Составление претензий и жалоб.</b> Адвокат поможет вам составить
+                претензии и жалобы в случае нарушения ваших прав, чтобы защитить вас от недобросовестных действий
                 продавцов или поставщиков.
             </li>
-            <li class="list-group-item m-2"><b>Обучение и консультации.</b> Адвокат по защите прав 
-                потребителей может обучить вас вашим правам как потребителя и консультировать по всем вопросам, 
+            <li class="list-group-item  "><b>Обучение и консультации.</b> Адвокат по защите прав
+                потребителей может обучить вас вашим правам как потребителя и консультировать по всем вопросам,
                 связанным с защитой потребительских прав.
             </li>
         </ul>
 
-        <p>Защита прав потребителей — это важный аспект современного общества, и адвокат по защите 
-            прав потребителей поможет вам обеспечить соблюдение ваших прав и защитить 
+        <p>Защита прав потребителей — это важный аспект современного общества, и адвокат по защите
+            прав потребителей поможет вам обеспечить соблюдение ваших прав и защитить
             от недобросовестных действий со стороны компаний или организаций.</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
