--- a/homeapp/templates/homeapp/services/individuals/debt_recovery_service.html
+++ b/homeapp/templates/homeapp/services/individuals/debt_recovery_service.html
@@ -3,48 +3,60 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Услуги адвоката по взысканию долгов</h1>
 
-        <h1>Услуги адвоката по взысканию долгов</h1>
-
-        <p>Адвокат, специализирующийся на взыскании долгов, предоставляет юридическую помощь и защиту 
-            интересов клиентов в сфере взыскания задолженностей. Вот как адвокат по взысканию долгов 
+        <p>Адвокат, специализирующийся на взыскании долгов, предоставляет юридическую помощь и защиту
+            интересов клиентов в сфере взыскания задолженностей. Вот как адвокат по взысканию долгов
             может помочь вам::
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Анализ ситуации.</b> Адвокат проведет анализ вашей 
-                ситуации, изучив документы и обстоятельства дела, чтобы определить наилучший способ 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item "><b>Анализ ситуации.</b> Адвокат проведет анализ вашей
+                ситуации, изучив документы и обстоятельства дела, чтобы определить наилучший способ
                 взыскания долга.
             </li>
-            <li class="list-group-item m-2"><b>Письменные требования.</b> Адвокат поможет составить и 
-                отправить письменное требование должнику о возврате долга, что часто может ускорить 
+            <li class="list-group-item "><b>Письменные требования.</b> Адвокат поможет составить и
+                отправить письменное требование должнику о возврате долга, что часто может ускорить
                 процесс взыскания.
             </li>
-            <li class="list-group-item m-2"><b>Переговоры и медиация.</b> Адвокат может провести 
-                переговоры с должником или его представителями, пытаясь достичь договоренности 
+            <li class="list-group-item "><b>Переговоры и медиация.</b> Адвокат может провести
+                переговоры с должником или его представителями, пытаясь достичь договоренности
                 о возврате долга без обращения в суд.
             </li>
-            <li class="list-group-item m-2"><b>Судебное взыскание.</b> В случае необходимости, 
+            <li class="list-group-item "><b>Судебное взыскание.</b> В случае необходимости,
                 адвокат представит ваши интересы в суде и будет заниматься процессом судебного взыскания долга.
             </li>
-            <li class="list-group-item m-2"><b>Исполнительное производство.</b> После получения решения суда 
-                о взыскании долга, адвокат будет следить за исполнением этого решения через исполнительное 
+            <li class="list-group-item "><b>Исполнительное производство.</b> После получения решения суда
+                о взыскании долга, адвокат будет следить за исполнением этого решения через исполнительное
                 производство.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в выборе оптимального способа взыскания.</b> Адвокат 
-                поможет вам выбрать наиболее эффективный способ взыскания долга, учитывая все обстоятельства 
+            <li class="list-group-item "><b>Помощь в выборе оптимального способа взыскания.</b> Адвокат
+                поможет вам выбрать наиболее эффективный способ взыскания долга, учитывая все обстоятельства
                 вашего дела.
             </li>
-            <li class="list-group-item m-2"><b>Защита ваших прав и интересов.</b> Адвокат будет защищать 
+            <li class="list-group-item "><b>Защита ваших прав и интересов.</b> Адвокат будет защищать
                 ваши права и интересы на всех этапах процесса взыскания, обеспечивая юридическую поддержку.
             </li>
         </ul>
 
-        <p>Адвокат по взысканию долгов поможет вам эффективно и законно вернуть задолженные 
-            средства, обеспечивая профессиональное представительство и поддержку в данной 
+        <p>Адвокат по взысканию долгов поможет вам эффективно и законно вернуть задолженные
+            средства, обеспечивая профессиональное представительство и поддержку в данной
             юридической области</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
