--- a/homeapp/templates/homeapp/services/individuals/enforcement_lawyer_service.html
+++ b/homeapp/templates/homeapp/services/individuals/enforcement_lawyer_service.html
@@ -3,41 +3,57 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Услуги адвоката по работе с приставами</h1>
 
-        <h1>Услуги адвоката по работе с приставами</h1>
-
-        <p>Адвокат, специализирующийся на работе с приставами, предоставляет правовую помощь в случаях, 
-            когда вам нужно решить проблемы, связанные с действиями приставов. Вот как адвокат по работе 
+        <p>Адвокат, специализирующийся на работе с приставами, предоставляет правовую помощь в случаях,
+            когда вам нужно решить проблемы, связанные с действиями приставов. Вот как адвокат по работе
             с приставами может помочь вам:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Защита прав от действий приставов.</b> Адвокат поможет вам защитить ваши 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item "><b>Защита прав от действий приставов.</b> Адвокат поможет вам защитить ваши
                 права и интересы от незаконных или недобросовестных действий приставов.
             </li>
-            <li class="list-group-item m-2"><b>Консультации и представительство.</b> Адвокат окажет консультации по вопросам взыскания 
-                задолженностей, поможет разобраться в процедурах работы приставов и представит вас во всех необходимых 
+            <li class="list-group-item "><b>Консультации и представительство.</b> Адвокат окажет консультации по
+                вопросам взыскания
+                задолженностей, поможет разобраться в процедурах работы приставов и представит вас во всех необходимых
                 юридических процессах.
             </li>
-            <li class="list-group-item m-2"><b>Оспаривание действий приставов.</b> В случае неправомерных действий приставов, адвокат 
+            <li class="list-group-item "><b>Оспаривание действий приставов.</b> В случае неправомерных действий
+                приставов, адвокат
                 поможет вам оспорить их в судебном порядке.
             </li>
-            <li class="list-group-item m-2"><b>Разрешение споров.</b> Адвокат поможет вам разрешить споры с приставами, 
+            <li class="list-group-item "><b>Разрешение споров.</b> Адвокат поможет вам разрешить споры с приставами,
                 связанные с взысканием долгов, исполнительными производствами и другими юридическими вопросами.
             </li>
-            <li class="list-group-item m-2"><b>Подготовка документов.</b> Адвокат поможет вам подготовить 
-                необходимые документы для взаимодействия с приставами, такие как возражения, жалобы и другие правовые акты.
+            <li class="list-group-item "><b>Подготовка документов.</b> Адвокат поможет вам подготовить
+                необходимые документы для взаимодействия с приставами, такие как возражения, жалобы и другие правовые
+                акты.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в исполнении требований приставов.</b> В случае необходимости исполнения требований 
+            <li class="list-group-item "><b>Помощь в исполнении требований приставов.</b> В случае необходимости
+                исполнения требований
                 приставов, адвокат поможет вам правильно выполнить все необходимые действия.
             </li>
         </ul>
 
-        <p>Адвокат по работе с приставами обеспечит вам квалифицированную правовую поддержку 
-            и защиту в случае возникновения проблем с приставами, помогая вам эффективно решить 
+        <p>Адвокат по работе с приставами обеспечит вам квалифицированную правовую поддержку
+            и защиту в случае возникновения проблем с приставами, помогая вам эффективно решить
             возникающие юридические вопросы..</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
