--- a/homeapp/templates/homeapp/services/individuals/family_matters_service.html
+++ b/homeapp/templates/homeapp/services/individuals/family_matters_service.html
@@ -3,45 +3,60 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Услуги адвоката по семейным делам</h1>
 
-        <h1>Услуги адвоката по семейным делам</h1>
-
-        <p>Услуги адвоката по семейным делам могут быть необходимы в различных ситуациях, связанных 
-        с семейными отношениями и правовыми вопросами. Вот как адвокат по семейным делам может помочь вам:
+        <p>Услуги адвоката по семейным делам могут быть необходимы в различных ситуациях, связанных
+            с семейными отношениями и правовыми вопросами. Вот как адвокат по семейным делам может помочь вам:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Развод и раздел имущества.</b> Адвокат поможет вам 
-                разработать стратегию для развода, защитит ваши интересы при разделе имущества и решении финансовых вопросов.
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Развод и раздел имущества.</b> Адвокат поможет вам
+                разработать стратегию для развода, защитит ваши интересы при разделе имущества и решении финансовых
+                вопросов.
             </li>
-            <li class="list-group-item m-2"><b>Опека над детьми.</b> В случае развода адвокат поможет 
-                в урегулировании вопросов об опеке над детьми, установлении графика общения с детьми и решении 
+            <li class="list-group-item"><b>Опека над детьми.</b> В случае развода адвокат поможет
+                в урегулировании вопросов об опеке над детьми, установлении графика общения с детьми и решении
                 других связанных вопросов.
             </li>
-            <li class="list-group-item m-2"><b>Алименты.</b> Адвокат поможет вам определить 
+            <li class="list-group-item"><b>Алименты.</b> Адвокат поможет вам определить
                 сумму алиментов или защитит ваши интересы, если вы должны платить алименты.
             </li>
-            <li class="list-group-item m-2"><b>Принятие усыновления или опеки.</b> Адвокат поможет вам 
+            <li class="list-group-item"><b>Принятие усыновления или опеки.</b> Адвокат поможет вам
                 разобраться в процессе усыновления или оформления опеки над ребенком.
             </li>
-            <li class="list-group-item m-2"><b>Семейное насилие.</b> В случае наличия семейного насилия адвокат поможет 
-                вам защитить свои права и безопасность, подготовить необходимые документы и представить вашу сторону в суде.
+            <li class="list-group-item"><b>Семейное насилие.</b> В случае наличия семейного насилия адвокат поможет
+                вам защитить свои права и безопасность, подготовить необходимые документы и представить вашу сторону в
+                суде.
             </li>
-            <li class="list-group-item m-2"><b>Исполнение решений суда.</b> Адвокат поможет 
+            <li class="list-group-item"><b>Исполнение решений суда.</b> Адвокат поможет
                 вам с исполнением решений суда, связанных с семейными делами, чтобы обеспечить их правильное выполнение.
             </li>
-            <li class="list-group-item m-2"><b>Консультации и представление интересов.</b> Адвокат по семейным делам предоставит 
-                вам консультации по всем вопросам, связанным с семейным правом, и представит ваши интересы во всех 
+            <li class="list-group-item"><b>Консультации и представление интересов.</b> Адвокат по семейным делам
+                предоставит
+                вам консультации по всем вопросам, связанным с семейным правом, и представит ваши интересы во всех
                 судебных процедурах.
             </li>
         </ul>
 
-        <p>Адвокат по семейным делам обладает специализированными знаниями и опытом в области семейного права и 
-            может помочь вам эффективно решить любые правовые вопросы, связанные с вашими семейными отношениями. 
-            Обращение к такому специалисту может обеспечить вам необходимую поддержку и защиту в сложных 
+        <p>Адвокат по семейным делам обладает специализированными знаниями и опытом в области семейного права и
+            может помочь вам эффективно решить любые правовые вопросы, связанные с вашими семейными отношениями.
+            Обращение к такому специалисту может обеспечить вам необходимую поддержку и защиту в сложных
             жизненных ситуациях.</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
