--- a/homeapp/templates/homeapp/services/individuals/land_disputes_service.html
+++ b/homeapp/templates/homeapp/services/individuals/land_disputes_service.html
@@ -3,45 +3,59 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Услуги адвоката по земельным спорам</h1>
 
-        <h1>Услуги адвоката по земельным спорам</h1>
-
-        <p>Адвокат, специализирующийся на земельных спорах, предоставляет юридическую помощь и защиту интересов 
+        <p>Адвокат, специализирующийся на земельных спорах, предоставляет юридическую помощь и защиту интересов
             клиентов в сфере земельного права. Вот как адвокат по земельным спорам может помочь вам:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Консультации по земельному праву.</b> Адвокат проведет консультацию 
-                по вопросам земельного законодательства, поможет вам понять ваши права и обязанности 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Консультации по земельному праву.</b> Адвокат проведет консультацию
+                по вопросам земельного законодательства, поможет вам понять ваши права и обязанности
                 в сфере земельных отношений.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в оспаривании прав на землю.</b> Адвокат поможет вам оспорить 
-                незаконные действия третьих лиц, претендующих на вашу землю или наоборот, поможет защитить ваши права 
+            <li class="list-group-item"><b>Помощь в оспаривании прав на землю.</b> Адвокат поможет вам оспорить
+                незаконные действия третьих лиц, претендующих на вашу землю или наоборот, поможет защитить ваши права
                 на участок земли.
             </li>
-            <li class="list-group-item m-2"><b>Разрешение споров о праве собственности.</b> Адвокат будет представлять 
-                ваши интересы в спорах о праве собственности на земельные участки, помогая защитить вас от незаконных 
+            <li class="list-group-item"><b>Разрешение споров о праве собственности.</b> Адвокат будет представлять
+                ваши интересы в спорах о праве собственности на земельные участки, помогая защитить вас от незаконных
                 действий других лиц.
             </li>
-            <li class="list-group-item m-2"><b>Составление договоров и соглашений.</b> Адвокат поможет вам составить и 
+            <li class="list-group-item"><b>Составление договоров и соглашений.</b> Адвокат поможет вам составить и
                 анализировать договоры купли-продажи, аренды или иных соглашений, связанных с земельными отношениями.
             </li>
-            <li class="list-group-item m-2"><b>Представление интересов в суде.</b> В случае необходимости адвокат 
-                будет представлять ваши интересы в суде по земельным спорам, защищая вас от неправомерных действий сторон.
+            <li class="list-group-item"><b>Представление интересов в суде.</b> В случае необходимости адвокат
+                будет представлять ваши интересы в суде по земельным спорам, защищая вас от неправомерных действий
+                сторон.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в получении разрешений и лицензий.</b> Адвокат может помочь 
-                вам получить необходимые разрешения, лицензии или сертификаты для использования или развития земельного участка.
+            <li class="list-group-item"><b>Помощь в получении разрешений и лицензий.</b> Адвокат может помочь
+                вам получить необходимые разрешения, лицензии или сертификаты для использования или развития земельного
+                участка.
             </li>
-            <li class="list-group-item m-2"><b>Сопровождение сделок с землейя.</b> Адвокат поможет вам сопровождать
-                 сделки с землей, обеспечивая юридическую безопасность при покупке, продаже, аренде или 
-                 использовании земельного участка.
+            <li class="list-group-item"><b>Сопровождение сделок с землейя.</b> Адвокат поможет вам сопровождать
+                сделки с землей, обеспечивая юридическую безопасность при покупке, продаже, аренде или
+                использовании земельного участка.
             </li>
         </ul>
 
         <p>Адвокат по земельным спорам имеет специализированные знания и опыт в области земельного законодательства
-             и поможет вам защитить ваши интересы в случае возникновения споров или проблем с земельными правами.</p>
-
+            и поможет вам защитить ваши интересы в случае возникновения споров или проблем с земельными правами.</p>
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
