--- a/homeapp/templates/homeapp/services/individuals/license_revocation_service.html
+++ b/homeapp/templates/homeapp/services/individuals/license_revocation_service.html
@@ -3,38 +3,58 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Услуги адвоката по лишению водительских прав</h1>
 
-        <h1>Услуги адвоката по лишению водительских прав</h1>
-
-        <p>Услуги адвоката по лишению водительских прав могут быть необходимы в случае, когда вам грозит или уже наложено 
+        <p>Услуги адвоката по лишению водительских прав могут быть необходимы в случае, когда вам грозит или уже
+            наложено
             лишение прав. Вот как адвокат может помочь в такой ситуации:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Правовая консультация.</b> Адвокат по лишению водительских прав предоставит 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Правовая консультация.</b> Адвокат по лишению водительских прав
+                предоставит
                 вам подробную правовую консультацию о вашем случае, объяснит ваши права и опции.
             </li>
-            <li class="list-group-item m-2"><b>Представление интересов в суде.</b> Если дело дошло до судебного разбирательства, 
+            <li class="list-group-item"><b>Представление интересов в суде.</b> Если дело дошло до судебного
+                разбирательства,
                 адвокат будет представлять ваши интересы в суде, защищая ваше право на вождение.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в оспаривании решения.</b> Адвокат может помочь вам оспорить 
+            <li class="list-group-item"><b>Помощь в оспаривании решения.</b> Адвокат может помочь вам оспорить
                 решение о лишении водительских прав, представив доказательства и аргументы в вашу пользу.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в снижении срока лишения прав.</b> В некоторых случаях адвокат может 
+            <li class="list-group-item"><b>Помощь в снижении срока лишения прав.</b> В некоторых случаях адвокат
+                может
                 помочь договориться о снижении срока лишения водительских прав или о других альтернативных мерах.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в урегулировании ситуации.</b> Адвокат может помочь вам разработать 
+            <li class="list-group-item"><b>Помощь в урегулировании ситуации.</b> Адвокат может помочь вам
+                разработать
                 стратегию для урегулирования ситуации и минимизации негативных последствий от лишения прав.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в апелляции.</b> Если вы не согласны с решением суда 
-                о лишении водительских прав, адвокат может помочь вам подать апелляцию и бороться за изменение этого решения.
+            <li class="list-group-item"><b>Помощь в апелляции.</b> Если вы не согласны с решением суда
+                о лишении водительских прав, адвокат может помочь вам подать апелляцию и бороться за изменение этого
+                решения.
             </li>
         </ul>
 
-        <p>Адвокат по лишению водительских прав имеет опыт и знания, необходимые для защиты ваших интересов в подобной ситуации. Обращение 
-            к профессионалу может помочь вам эффективно решить проблему и вернуть ваше право на управление автотранспортом.</p>
-
+        <p>Адвокат по лишению водительских прав имеет опыт и знания, необходимые для защиты ваших интересов в подобной
+            ситуации. Обращение
+            к профессионалу может помочь вам эффективно решить проблему и вернуть ваше право на управление
+            автотранспортом.</p>
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
