--- a/homeapp/templates/homeapp/services/individuals/migration_service.html
+++ b/homeapp/templates/homeapp/services/individuals/migration_service.html
@@ -3,46 +3,58 @@
 
 {% block content %}
 
-    <div class="container">
-
-        <h1>Услуги адвоката по миграционным делам</h1>
-
-        <p>Услуги адвоката по миграционным делам включают в себя широкий спектр юридических услуг, связанных 
-            с иммиграцией и законодательством о миграции. Вот некоторые из основных аспектов, с которыми адвокаты 
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Услуги адвоката по миграционным делам</h1>
+        <p>Услуги адвоката по миграционным делам включают в себя широкий спектр юридических услуг, связанных
+            с иммиграцией и законодательством о миграции. Вот некоторые из основных аспектов, с которыми адвокаты
             по миграционным делам могут помочь:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Консультации по иммиграционным вопросам.</b> Адвокаты консультируют 
-                клиентов по вопросам иммиграции, визового режима, статуса беженца, гражданства и других вопросов, 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Консультации по иммиграционным вопросам.</b> Адвокаты консультируют
+                клиентов по вопросам иммиграции, визового режима, статуса беженца, гражданства и других вопросов,
                 связанных с миграцией.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в подготовке документов.</b> Адвокаты помогают клиентам 
-                подготовить необходимые документы для получения визы, разрешения на работу, грин-карты или 
+            <li class="list-group-item"><b>Помощь в подготовке документов.</b> Адвокаты помогают клиентам
+                подготовить необходимые документы для получения визы, разрешения на работу, грин-карты или
                 других иммиграционных документов.
             </li>
-            <li class="list-group-item m-2"><b>Представление интересов в иммиграционных службах.</b> Адвокаты 
-                представляют интересы клиентов перед иммиграционными службами, помогая решать возникающие вопросы и проблемы.
+            <li class="list-group-item"><b>Представление интересов в иммиграционных службах.</b> Адвокаты
+                представляют интересы клиентов перед иммиграционными службами, помогая решать возникающие вопросы и
+                проблемы.
             </li>
-            <li class="list-group-item m-2"><b>Защита прав мигрантов.</b> Адвокаты защищают права мигрантов, 
+            <li class="list-group-item"><b>Защита прав мигрантов.</b> Адвокаты защищают права мигрантов,
                 помогая им справиться с дискриминацией, незаконным задержанием или депортацией.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в процессе беженства.</b> Адвокаты помогают лицам, 
+            <li class="list-group-item"><b>Помощь в процессе беженства.</b> Адвокаты помогают лицам,
                 ищущим убежище, подготовить и представить свои кейсы перед компетентными органами.
             </li>
-            <li class="list-group-item m-2"><b>Апелляции и обжалование решений.</b> Адвокаты помогают 
+            <li class="list-group-item"><b>Апелляции и обжалование решений.</b> Адвокаты помогают
                 клиентам обжаловать негативные решения иммиграционных служб, включая отказ в визе или статусе.
             </li>
-            <li class="list-group-item m-2"><b>Семейная иммиграция.</b> Адвокаты помогают семьям объединиться 
+            <li class="list-group-item"><b>Семейная иммиграция.</b> Адвокаты помогают семьям объединиться
                 путем процесса семейной иммиграции, включая подачу петиций на воссоединение семьи.
             </li>
         </ul>
 
-        <p>Услуги адвоката по миграционным делам могут быть очень важны для людей, сталкивающихся 
-            с вопросами иммиграции, статуса мигранта, визового режима и других аспектов миграционного права. 
-            Опытный адвокат поможет клиентам навигировать сложные правовые процессы и обеспечит защиту их прав 
+        <p>Услуги адвоката по миграционным делам могут быть очень важны для людей, сталкивающихся
+            с вопросами иммиграции, статуса мигранта, визового режима и других аспектов миграционного права.
+            Опытный адвокат поможет клиентам навигировать сложные правовые процессы и обеспечит защиту их прав
             и интересов в области миграции</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
