--- a/homeapp/templates/homeapp/services/individuals/traffic_accident_service.html
+++ b/homeapp/templates/homeapp/services/individuals/traffic_accident_service.html
@@ -3,39 +3,57 @@
 
 {% block content %}
 
-    <div class="container">
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Услуги адвокатов по дорожно-транспортным происшествиям</h1>
 
-        <h1>Услуги адвокатов по дорожно-транспортным происшествиям</h1>
-
-        <p>Услуги адвокатов по дорожно-транспортным происшествиям (ДТП) могут быть очень полезными в случае аварии или 
-            другого юридического инцидента на дороге. Вот некоторые из основных аспектов, с которыми автоюристы могут помочь:
+        <p>Услуги адвокатов по дорожно-транспортным происшествиям (ДТП) могут быть очень полезными в случае аварии или
+            другого юридического инцидента на дороге. Вот некоторые из основных аспектов, с которыми автоюристы могут
+            помочь:
         </p>
 
-        <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item m-2"><b>Помощь в обсуждении страховых претензий.</b> Автоюристы могут помочь вам обсудить 
+        <ul class="list-group list-group-flush service__texts">
+            <li class="list-group-item"><b>Помощь в обсуждении страховых претензий.</b> Автоюристы могут помочь вам
+                обсудить
                 страховые претензии с вашей страховой компанией и помочь в получении справедливой компенсации за ущерб.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в сборе доказательств.</b> Автоюристы могут помочь вам собрать необходимые 
+            <li class="list-group-item"><b>Помощь в сборе доказательств.</b> Автоюристы могут помочь вам собрать
+                необходимые
                 доказательства, такие как фотографии места происшествия, свидетельские показания и медицинские отчеты.
             </li>
-            <li class="list-group-item m-2"><b>Представление интересов в суде.</b> В случае необходимости судебного разбирательства, 
+            <li class="list-group-item"><b>Представление интересов в суде.</b> В случае необходимости судебного
+                разбирательства,
                 автоюристы могут представлять ваши интересы в суде и помочь защитить ваши права.
             </li>
-            <li class="list-group-item m-2"><b>Оценка ущерба.</b> Автоюристы могут помочь оценить ущерб, нанесенный вашему 
+            <li class="list-group-item"><b>Оценка ущерба.</b> Автоюристы могут помочь оценить ущерб, нанесенный вашему
                 транспортному средству, имуществу и здоровью, чтобы обеспечить справедливую компенсацию.
             </li>
-            <li class="list-group-item m-2"><b>Помощь в случае личной травмы.</b> Если вы получили травмы в результате ДТП, 
-                автоюристы могут помочь вам обратиться за медицинской помощью и получить компенсацию за лечение и реабилитацию.
+            <li class="list-group-item"><b>Помощь в случае личной травмы.</b> Если вы получили травмы в результате ДТП,
+                автоюристы могут помочь вам обратиться за медицинской помощью и получить компенсацию за лечение и
+                реабилитацию.
             </li>
-            <li class="list-group-item m-2"><b>Консультации по юридическим вопросам.</b> Автоюристы могут предоставить 
-                консультации по юридическим вопросам, связанным с ДТП, страхованием, ответственностью и другими аспектами автомобильного права.
+            <li class="list-group-item"><b>Консультации по юридическим вопросам.</b> Автоюристы могут предоставить
+                консультации по юридическим вопросам, связанным с ДТП, страхованием, ответственностью и другими
+                аспектами автомобильного права.
             </li>
         </ul>
 
-        <p>Услуги автоюристов могут значительно облегчить процесс решения юридических вопросов, связанных 
-            с дорожно-транспортными происшествиями. Опытный автоюрист поможет вам защитить ваши права, получить 
+        <p>Услуги автоюристов могут значительно облегчить процесс решения юридических вопросов, связанных
+            с дорожно-транспортными происшествиями. Опытный автоюрист поможет вам защитить ваши права, получить
             справедливую компенсацию и эффективно решить возникающие юридические проблемы после аварии.</p>
-
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
