--- a/homeapp/templates/homeapp/services/legals/insolvency_support.html
+++ b/homeapp/templates/homeapp/services/legals/insolvency_support.html
@@ -3,23 +3,41 @@
 
 {% block content %}
 
-    <div class="container">
-        <h1>Сопровождение банкротсва (субсидиарная ответсвенность)</h1>
-        <div class="row">            
-            <ul class="list-group list-group-flush mb-3">
-                <li class="list-group-item m-2">Наша команда обладает значительным опытом в сопровождении процедуры
-                    банкротсва. Мы предлагаем комплексную поддержку, начиная с помощи в подготовке необходимых документов.
+<div class="container">
+    <div class="service">
+        <h1 class="page-section__title">Сопровождение банкротсва (субсидиарная ответсвенность)</h1>
+        <div class="row">
+            <ul class="list-group list-group-flush service__texts">
+                <li class="list-group-item">Наша команда обладает значительным опытом в сопровождении процедуры
+                    банкротсва. Мы предлагаем комплексную поддержку, начиная с помощи в подготовке необходимых
+                    документов.
                 </li>
-                <li class="list-group-item m-2">Наши специалисты разработают стратегию оптимального разрешения вопросов банкротства,
-                     с учетом всех юридических нюансов и особенностей судебной практики.</li>
-                <li class="list-group-item m-2">Мы обеспечим вас профессиональной поддержкой по вопросам субсидиарной ответственности, 
+                <li class="list-group-item">Наши специалисты разработают стратегию оптимального разрешения вопросов
+                    банкротства,
+                    с учетом всех юридических нюансов и особенностей судебной практики.</li>
+                <li class="list-group-item">Мы обеспечим вас профессиональной поддержкой по вопросам субсидиарной
+                    ответственности,
                     помогая разобраться в сложных юридических аспектах этой области.
                 </li>
-                <li class="list-group-item m-2">Наши эксперты помогут защитить ваши интересы и минимизировать риски, связанные 
+                <li class="list-group-item">Наши эксперты помогут защитить ваши интересы и минимизировать риски,
+                    связанные
                     с субсидиарной ответственностью.
                 </li>
             </ul>
         </div>
     </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
