--- a/homeapp/templates/homeapp/services/legals/legal_service_list.html
+++ b/homeapp/templates/homeapp/services/legals/legal_service_list.html
@@ -1,24 +1,44 @@
 {% extends 'homeapp/base.html' %}
-{% load static %}    
-    
-{% block content %}
-    
-        <div class="container">  
-            <h1 class="text-center h1">Услуги, оказываемые юридическим лицам:</h1>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item m-2"><a href="{% url 'homeapp:complex_support' %}" 
-                    style="text-decoration: none; color: #000000;">Комплексное абоненсткое сопровождение 
-                    адвокатом</a></li>
-                <li class="list-group-item m-2"><a href="{% url 'homeapp:insolvecy_support' %}"
-                    style="text-decoration: none; color: #000000;">Сопровождение банкротства 
-                    (субсидиарная ответсвенность)</a></li>
-            </ul>  
-    
-        </div>
+{% load static %}
 
-        <div class="container bg-light py-2 px-3 mt-2 mb-2 border rounded">
-            <h2 class="text-center">Оставить заявку:</h2>
-            {% include 'homeapp/forms/application_form.html' %}
+{% block content %}
+
+<div class="container">
+    <div class="service-list">
+        <h1 class="service-list__title h1">Услуги, оказываемые юридическим лицам</h1>
+        <ul class="list-group list-group-flush service-list__items">
+            <li class="list-group-item service-list__item"><a href="{% url 'homeapp:complex_support' %}">
+                    <span>
+                        Комплексное абоненсткое
+                        сопровождение
+                        адвокатом
+                    </span>
+                    <img src="{% static 'homeapp/img/arrow-right.png' %}" alt="" />
+                </a>
+            </li>
+            <li class="list-group-item service-list__item"><a href="{% url 'homeapp:insolvecy_support' %}">
+                    <span>
+                        Сопровождение
+                        банкротства
+                        (субсидиарная ответсвенность)
+                    </span>
+                    <img src="{% static 'homeapp/img/arrow-right.png' %}" alt="" />
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="send-request">
+        <div class="container">
+            <div class="send-request__inner">
+                <div class="send-request__content">
+                    <h2 class="send-request__title">Оставить заявку:</h2>
+                    {% include 'homeapp/forms/application_form.html' %}
+                </div>
+                <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
+            </div>
         </div>
-    
+    </div>
+</div>
+
 {% endblock %}
